--- a/output/team.html
+++ b/output/team.html
@@ -27,14 +27,40 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Robert Jones</h2>
+        <h2 class="card-title">Karen Managers</h2>
+        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 1A-M</li>
+            <li class="list-group-item">Email: <a href="mailto:karen.managers@notreal.com">karen.managers@notreal.com</a></li>
+            <li class="list-group-item">Office number: 1111</li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Justin Time</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 23</li>
-            <li class="list-group-item">Email: <a href="mailto:robert.jones@notreal.com">robert.jones@notreal.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/rbjones" target="_blank" rel="noopener noreferrer">rbjones</a></li>
+            <li class="list-group-item">ID: 123</li>
+            <li class="list-group-item">Email: <a href="mailto:justin.time@notreal.com">justin.time@notreal.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/jtime" target="_blank" rel="noopener noreferrer">jtime</a></li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Anita Bath</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 321</li>
+            <li class="list-group-item">Email: <a href="mailto:anita.bath@notreal.com">anita.bath@notreal.com</a></li>
+            <li class="list-group-item">School: University of Bath</li>
         </ul>
     </div>
 </div>
